--- a/index.html
+++ b/index.html
@@ -49,26 +49,29 @@
     <section class="project">
         <div class="context-project">
             <h3>Our Project</h3>
-            <div class="row-project">
-                <div class="column-project">
-                    <div class="card-project"></div>
-                </div>
-                <div class="column-project">
-                    <div class="card-project"></div>
-                </div>
-                <div class="column-project">
-                    <div class="card-project"></div>
-                </div>
-                <div class="column-project">
-                    <div class="card-project"></div>
-                </div>
+        <div class="column-project">
+            <div class="column-card">
+                <div class="card-project"></div>
                 <div class="column-info">
-                    <h4 class="info-project" style="margin-top: 10px;">Metal Gear</h4>
-                    <p class="info-project" style="font-size: 12px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <h3>Metal Gear</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
                 </div>
             </div>
         </div>
+        <div class="column-project">
+            <div class="column-card">
+                <div class="card-project"></div>
+                <div class="column-info">
+                    <h3>Metal Gear</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                </div>
+            </div>
+        </div>
+        
+        </div>
     </section>
+
+
     <section class="client">
         <div class="context-client">
             <h3>Our Client</h3>
